# bull

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: PORTFOLIO_AND_DETAILS_EXECUTION_PLAN.md  PROJECT_EXECUTION_PLAN.md
src/: cache.rs  cli.rs  error.rs  main.rs  model.rs  output.rs  stock.rs
src/portfolio/: calculator.rs  mod.rs  model.rs  store.rs
src/provider/: alphavantage.rs  community.rs  mod.rs  twelvedata.rs
src/resolver/: matcher.rs  mod.rs  sec_index.rs
tests/: integration_cli.rs
