[package]
name = "bull"
version = "0.1.0"
edition = "2018"
description = "A clutter-free stock quote CLI for checking the latest available free quote for US equities."
license = "MIT"
readme = "README.md"
repository = "https://github.com/semalPatel/bull"
homepage = "https://github.com/semalPatel/bull"
keywords = ["stocks", "cli", "finance", "quotes"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "src/**",
    "tests/**",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
thiserror = "1.0"
console = "0.15"
prettytable-rs = "0.10"
